docs: surefire configuration notes